fixed sidebar alignment and source code link

--- a/src/components/PageLayout/Sidebar/sidebar.module.less
+++ b/src/components/PageLayout/Sidebar/sidebar.module.less
@@ -87,6 +87,7 @@
                 // color: rgba(95, 111, 129, 0.582);
                 color: rgb(255, 192, 203);
                 font-size: 80%;
+                text-align: center;
             }
 
         // .resumeDownload{
